--- a/about/index.html
+++ b/about/index.html
@@ -63,10 +63,6 @@
                     <a href="/about/">Om mig</a>
                 </li>
                 
-                <li>
-                    <a href="/contact/">Kontakt</a>
-                </li>
-                
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -83,7 +79,7 @@
                 <div class="site-heading">
                     <h1>Om mig</h1>
                     <hr class="small">
-                    <span class="subheading">Personen bakom bloggen</span>
+                    <span class="subheading">Varför jag skriver</span>
                 </div>
             </div>
         </div>
@@ -94,19 +90,21 @@
 <div class="container">
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-			<p>Hello!</p>
+			<p>Jag heter Morgan och är 28 år gammal och jag har varit med blogg en gång tidigare. Då var jag 18-19 år gammal och bodde några månader i Annecy, Frankrike, och sysslade med språkstudier. Det jag skrev på den tiden tjänade två syften - dels att uppdatera familj och vänner om tillvaron där nere och dels för att ha något att se tillbaka på i efterhand för att påminna mig om en extraordinär tid i mitt liv.</p>
 
-<p>My name is Morgan and I'm a psychologist with a special interest in statistics and psychometrics. Please have a look at some stuff I've done in the links at the bottom!</p>
+<p>Bloggen blev en fast punkt i tillvaron, ett sätt att regelbundet reflektera över tillvaron och känna samhörighet med de jag skrev till.</p>
 
-<p>I work at <a href="http://www.cubiks.com">Cubiks</a>, an international assessment and development consultancy. Being a part of the products team, my main focus is on ensuring high quality of our tests and solutions.</p>
+<p>Anledningen till att jag har börjat skriva igen är att jag är på väg in i en ny period i mitt liv då jag kan behöva en blogg. Jag har tagit ett jobb i centrala London och kommer att flytta dit 6 maj. Företaget heter Pearson Education och jag kommer att arbeta som Senior Research Associate på en avdelning som jobbar med arbetspsykologiska test, <a href="http://www.talentlens.co.uk/" target="_blank">TalentLens</a>.</p>
 
-<p>I've previously been working as a clinical psychologist at the <a href="http://www.lul.se/en/Care-and-Health/Disabilities/Habilitation/#The%20Habilitation%20Centre">Habilitation Centre</a>, and with test development at <a href="http://www.pearsonassessment.se">Pearson Assessment</a>. My experience in psychological assessment comes from both research and practice.</p>
+<h2>Bakgrund</h2>
 
-<p>I grew up in the countryside near Linköping, and currently live in Birkastan, Stockholm. I graduated with a Master's degree from the Psychologist Programme with an orientation toward Sports at Umeå university in 2012.</p>
+<p>Min förra arbetsplats var <a href="http://www.cubiks.se" target="_blank">Cubiks</a> i Stockholm. Som konsult i produktteamet var mitt huvudfokus affärsutveckling, utbildning och att se till att våra onlinetest höll högsta kvalitet. En av de produkter som jag lagt mycket tid och energi på var den svenska versionen av personlighetstestet PAPI 3.</p>
 
-<p>My Master's thesis was a randomized controlled trial of an online intervention for depression. The paper is now published in a <a href="https://peerj.com/articles/178/">peer-reviewed scientific journal</a>, available online for free. The data and analyses in R-code are also openly available on <a href="http://datadryad.org/resource/doi:10.5061/dryad.c6q65">datadryad.org</a>.</p>
+<p>Innan dess genomförde jag min PTP på Habiliteringen för barn och vuxna i Tierp och på <a href="http://www.pearsonassessment.se" target="_blank">Pearson Assessment</a> i Stockholm. Psykologiska test har varit en röd tråd för mig under den här tiden, både när det gäller utveckling och vid praktisk användning.</p>
 
-<p>To get in touch, click any of the icons below or the button "Kontakt" on the top!</p>
+<p>Jag kommer ursprungligen från Linköping, studerade psykologprogrammet med inriktning mot idrott vid Umeå universitet och har sedan dess bott i Uppsala och Stockholm. Min masteruppsats var en randomiserad kontrollerad studie som avhandlade effekterna av en internetbehandling på depression. Studien är nu även <a href="https://peerj.com/articles/178/" target="_blank">publicerad i en vetenskaplig tidsskrift online</a>. Resultaten från studien och den statistiska analysen (skriven i R) finns tillgängliga på <a href="http://datadryad.org/resource/doi:10.5061/dryad.c6q65" target="_blank">datadryad.org</a>.
+
+
 		</div>
 	</div>
 </div>
